--- a/app/src/main/res/layout/activity_serviceintervaladding.xml
+++ b/app/src/main/res/layout/activity_serviceintervaladding.xml
@@ -77,16 +77,32 @@
             app:layout_constraintTop_toBottomOf="@id/serviceinterval_name_edit_text"
             app:layout_constraintStart_toStartOf="parent" />
 
+        <Spinner
+            android:id="@+id/serviceinterval_type_spinner"
+            android:spinnerMode="dropdown"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/averagesans_regular"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="200dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/interval_text_view"
+            app:layout_constraintEnd_toStartOf="@id/value_edit_text"
+            app:layout_constraintBottom_toTopOf="@id/repeat_things_layout" />
+
+
         <EditText
             android:id="@+id/value_edit_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="50dp"
             android:hint="Value"
             android:inputType="number"
-            android:layout_marginTop="5dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/repeat_things_layout"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/serviceinterval_type_spinner"
             app:layout_constraintTop_toBottomOf="@id/interval_text_view" />
 
         <LinearLayout
