--- a/app/src/main/res/layout/activity_serviceintervaladding.xml
+++ b/app/src/main/res/layout/activity_serviceintervaladding.xml
@@ -77,32 +77,17 @@
             app:layout_constraintTop_toBottomOf="@id/serviceinterval_name_edit_text"
             app:layout_constraintStart_toStartOf="parent" />
 
-        <Spinner
-            android:id="@+id/serviceinterval_type_spinner"
-            android:spinnerMode="dropdown"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/averagesans_regular"
-            android:layout_marginTop="10dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="200dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/interval_text_view"
-            app:layout_constraintEnd_toStartOf="@id/value_edit_text"
-            app:layout_constraintBottom_toTopOf="@id/repeat_things_layout" />
-
 
         <EditText
             android:id="@+id/value_edit_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:layout_marginEnd="50dp"
-            android:hint="Value"
+            android:layout_marginStart="12dp"
+            android:hint="Value(km)"
             android:inputType="number"
             app:layout_constraintBottom_toTopOf="@id/repeat_things_layout"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/serviceinterval_type_spinner"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/interval_text_view" />
 
         <LinearLayout
@@ -114,39 +99,39 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/value_edit_text">
 
-        <TextView
-            android:id="@+id/repeat_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Repeat"
-            android:visibility="visible"
-            android:fontFamily="@font/averagesans_regular"
-            android:textStyle="bold"
-            android:textSize="25sp"
-            android:textColor="@color/black"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="30dp" />
+            <TextView
+                android:id="@+id/repeat_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Repeat"
+                android:visibility="visible"
+                android:fontFamily="@font/averagesans_regular"
+                android:textStyle="bold"
+                android:textSize="25sp"
+                android:textColor="@color/black"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="30dp" />
 
-        <Switch
-            android:id="@+id/repeat_switch"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="27dp"
-            tools:ignore="UseSwitchCompatOrMaterialXml" />
+            <Switch
+                android:id="@+id/repeat_switch"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="27dp"
+                tools:ignore="UseSwitchCompatOrMaterialXml" />
 
-        <TextView
-            android:id="@+id/maxlife_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Max life"
-            android:fontFamily="@font/averagesans_regular"
-            android:textStyle="bold"
-            android:textSize="25sp"
-            android:textColor="@color/black"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="30dp"
-            android:visibility="gone" />
+            <TextView
+                android:id="@+id/maxlife_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Max life"
+                android:fontFamily="@font/averagesans_regular"
+                android:textStyle="bold"
+                android:textSize="25sp"
+                android:textColor="@color/black"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="30dp"
+                android:visibility="gone" />
 
         </LinearLayout>
 
